Se suben varias mejoras y arreglos del lector

--- a/public/lector/data/seirei-gensouki-25/cap-02.html
+++ b/public/lector/data/seirei-gensouki-25/cap-02.html
@@ -1,21 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="es" xml:lang="es">
-<head>
-  <title>Capítulo 2</title>
-  <link rel="stylesheet" type="text/css" href="../Styles/style.css"/>
-  
-</head>
-
-<body xml:lang="es" lang="es" epub:type="bodymatter">
-  <section epub:type="chapter" role="doc-chapter" id="chapter">
-
-    <header>
-      <h1 title="Capítulo 2: Gólem">Capítulo 2
-        <br/><small>Gólem</small>
-      </h1>
-    </header>
+<header>
+  <h1>Capítulo 2<br/>Gólem</h1>
+</header>
 
 <p class="noidentar">En el jardín de la azotea del Castillo de Galarc, Sumeragi Satsuki miraba al cielo.</p>
 
@@ -26,7 +11,3 @@
 <p>Después, una entidad metálica similar a un robot cayó y comenzó a atacar, pero una chica desconocida de cabello rosado y máscara —Aishia— comenzó a luchar para protegerlos. Miharu también lanzó hechizos para combatirla, antes de teletransportar a todos al jardín de la azotea del castillo y luego desaparecer con Celia.</p>
 
 <!--Y sigue...-->
-
-</section>
-</body>
-</html>
