--- a/public/lector/data/seirei-gensouki-25/prologo.html
+++ b/public/lector/data/seirei-gensouki-25/prologo.html
@@ -1,21 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="es" xml:lang="es">
-<head>
-  <title>Prólogo</title>
-  <link rel="stylesheet" type="text/css" href="../Styles/style.css"/>
-  
-</head>
-
-<body xml:lang="es" lang="es" epub:type="bodymatter">
-  <section epub:type="prologue" role="doc-prologue" id="prologue" aria-label="Prólogo">
-    
-    <header>
-      <h1 title="Prólogo: Preparaciones">Prólogo
-        <br/><small>Preparaciones</small>
-      </h1>
-    </header>
+<header>
+  <h1>Prólogo<br/>Preparaciones</h1>
+</header>
 
 <p class="noidentar">Inmediatamente después de que terminara la Guerra Divina —es decir, mil años antes de la era moderna en que vivía Rio, en algún lugar del este de Strahl— una mujer de rasgos extremadamente refinados se encontraba sola en un páramo deshabitado. Su aspecto era tan frágil que parecía que una ráfaga de viento podría llevársela volando, y aparentaba no tener más de veinte años.</p>
 
@@ -44,7 +29,3 @@
 <p>A pesar de saber que le quedaba poco tiempo, Lina sonrió satisfecha y bajó la vista hacia la tierra donde se encontraba.</p>
 
 <p>Era el lugar donde, en el futuro, se alzaría el Castillo de Galarc.</p>
-
-  </section>
-</body>
-</html>
