--- a/static/lector/data/seirei-gensouki-25/cap-01.html
+++ b/static/lector/data/seirei-gensouki-25/cap-01.html
@@ -1,21 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="es" xml:lang="es">
-<head>
-  <title>Capítulo 1</title>
-  <link rel="stylesheet" type="text/css" href="../Styles/style.css"/>
-  
-</head>
-
-<body xml:lang="es" lang="es" epub:type="bodymatter">
-  <section epub:type="chapter" role="doc-chapter" id="chapter">
-
-    <header>
-      <h1 title="Capítulo 1: El Séptimo Dios Sabio">Capítulo 1
-        <br/><small>El Séptimo Dios Sabio</small>
-      </h1>
-    </header>
+<header>
+  <h1>Capítulo 1<br/>El Séptimo Dios Sabio</h1>
+</header>
 
 <p class="noidentar">Año 1.000 de la Era Sagrada.</p>
 
@@ -485,7 +470,3 @@
 <p>—Es exactamente quien piensas. Lo invocaremos aquí.</p>
 
 <p>Miharu asintió con aire presumido, sonriendo de oreja a oreja.</p>
-
-</section>
-</body>
-</html>
