--- a/static/lector/data/seirei-gensouki-25/titulo.html
+++ b/static/lector/data/seirei-gensouki-25/titulo.html
@@ -1,41 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html>
+<h1 class="titulo" title="Página de título">
+  <span class="grande">Seirei Gensouki</span>
+  <br/><span>Nuestro Héroe</span>
+</h1>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="es" xml:lang="es">
-<head>
-  <title>Página de título</title>
-  <link rel="stylesheet" type="text/css" href="../Styles/style.css"/>
-  
-</head>
+<h2 class="subtitulo">Volumen 25<br/><small>[Novela Ligera]</small></h2>
 
-<body xml:lang="es" lang="es" epub:type="frontmatter">
-  <section epub:type="titlepage copyright-page" id="titlepage" aria-label="Página de título">
-<h1 class="titulo" title="Página de título" epub:type="fulltitle">
+<div class="centrado">
+  <p class="salto1"><b>Autor</b>: Yuri Kitayama</p>
+  <p><b>Ilustraciones</b>: Riv</p>
 
-      <span class="grande" epub:type="title">Seirei Gensouki</span>
-<br/><span epub:type="subtitle" role="doc-subtitle">Nuestro Héroe</span>
-    </h1>
-    <h2 class="subtitulo sigil_not_in_toc">Volumen 25<br/><small>[Novela Ligera]</small></h2>
+  <p class="salto1"><b>Traducción jap-ing</b>: J-Novel Club</p>
+  <p><b>Traducción al español</b>: Diego</p>
+  <p><b>Corrección</b>: Diego</p>
 
-    <div class="centrado" epub:type="copyright-page" id="copyright-page">
-      <p class="salto1"><b>Autor:</b> <ruby>北山結莉<rp>(</rp><rt>Yuri Kitayama</rt><rp>)</rp></ruby></p>
-      <p><b>Ilustraciones:</b> Riv</p>
+  <p class="salto1"><b>Epub</b>: <a href="https://x.com/Saosora_">Saosora</a> (<a href="https://www.facebook.com/ZeePubs">ZeePubs</a>)</p>
 
-      <p class="salto1"><b>Traducción jap-ing:</b> J-Novel Club</p>
-      <p><b>Traducción al español:</b> Diego</p>
-      <p><b>Corrección:</b> Diego</p>
+  <p class="salto1"><b>Página Web</b>: <a href="https://kasniaproject.us.kg/">kasniaproject.us.kg</a></p>
 
-      <p class="salto1"><b>Epub:</b> <a href="https://x.com/Saosora_">Saosora</a> (<a href="https://www.facebook.com/ZeePubs">ZeePubs</a>)</p>
+  <p class="salto1"><b>Contenido</b>: <a href="https://drive.google.com/drive/folders/1NBbkBdWwcFuNQJlI6MnFX-aUU4DXrAJW">Google Drive</a></p>
 
-      <p class="salto1"><b>Página Web</b><br/>
-        <a href="https://kasniaproject.us.kg/">kasniaproject.us.kg</a></p>
-
-      <p class="salto1"><b>Contenido</b><br/>
-        <a href="https://drive.google.com/drive/folders/1NBbkBdWwcFuNQJlI6MnFX-aUU4DXrAJW">Google Drive</a></p>
-
-      <p class="salto1"><b>Redes sociales</b><br/>
-        <a href="https://www.facebook.com/profile.php?id=61569583498113">Facebook</a></p>
-    </div>
-  </section>
-</body>
-</html>
+  <p class="salto1"><b>Redes sociales</b>: <a href="https://www.facebook.com/profile.php?id=61569583498113">Facebook</a></p>
+</div>
